RESOLVED FIXED 247256
REGRESSION(256008@main) TestWebKitAPI.IPCTestingAPI.CanIntercept* tests fail
https://bugs.webkit.org/show_bug.cgi?id=247256
Summary REGRESSION(256008@main) TestWebKitAPI.IPCTestingAPI.CanIntercept* tests fail
Kimmo Kinnunen
Reported 2022-10-31 02:01:58 PDT
REGRESSION(256008@main) TestWebKitAPI.IPCTestingAPI.CanIntercept* tests fail
Attachments
Radar WebKit Bug Importer
Comment 1 2022-10-31 03:08:46 PDT
Kimmo Kinnunen
Comment 2 2022-10-31 04:32:03 PDT
EWS
Comment 3 2022-11-07 11:59:40 PST
Committed 256420@main (7e3be0d69574): <https://commits.webkit.org/256420@main> Reviewed commits have been landed. Closing PR #5952 and removing active labels.
Alex Christensen
Comment 4 2022-11-07 16:23:29 PST
error: lambda capture 'arg0' is not used [-Werror,-Wunused-lambda-capture] connection.sendWithAsyncReply(Messages::IPCTesterReceiver::AsyncMessage(arg0 + 1), [arg0](uint32_t newArg0) { ^~~~ 1 error generated. Fixing in https://github.com/WebKit/WebKit/pull/6231
Note You need to log in before you can comment on or make changes to this bug.